Closed Bug 1584309 Opened 6 years ago Closed 6 years ago

Assertion failure: !iter.done(), at js/src/builtin/TestingFunctions.cpp:2986 with inIon

Categories

(Core :: JavaScript Engine: JIT, defect, P2)

x86_64
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla71
Tracking Status
firefox71 --- fixed

People

(Reporter: anba, Assigned: cfallin)

References

Details

Attachments

(1 file)

+++ This bug was initially created as a clone of Bug #1584034 +++

See bug 1584034 for a possible fix.

Test case:

import('./doesnotexist.js').then(() => {}, inIon);

Asserts with:

js> import('./doesnotexist.js').then(() => {}, inIon);
({})
Assertion failure: !iter.done(), at /home/andre/git/mozilla-central/js/src/builtin/TestingFunctions.cpp:2948

Pushed by tcampbell@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/5893b84bbc3c Fix assert failure when inIon is invoked directly from runqueue (outside of JS context). r=tcampbell
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla71
Assignee: nobody → cfallin
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: