Bug 1584309: Fix assert failure when inIon is invoked directly from runqueue (outside of JS context). r=tcampbell

Differential Revision: https://phabricator.services.mozilla.com/D47385